# tap-tilroy

./: .gitignore  README.md  TILROY_API_RESEARCH.md  full_catalog.json  meltano.yml  openapi.json  pyproject.toml  requirements.txt  test.json  test_catalog.json  test_catalog_selected.json  test_po_catalog.json  test_sales_catalog.json  tox.ini
docs/: API_NOTES.md  PROJECT_OVERVIEW.md  README.md  STREAMS.md  TESTING.md
tap_tilroy/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_tilroy/streams/: __init__.py  prices.py  products.py  purchase.py  sales.py  shops.py  stock.py  transfers.py
tilroy_docs/: activityapi.html  activityapi_spec.json  addonapi.html  addonapi_spec.json  assetapi.html  assetapi_spec.json  authenticationapi.html  authenticationapi_spec.json  basketapi.html  basketapi_spec.json  customerapi.html  customerapi_spec.json  deliveryapi.html  deliveryapi_spec.json  deliverynoteapi.html  deliverynoteapi_spec.json  featureapi.html  featureapi_spec.json  orderapi.html  orderapi_spec.json  paymentrequestapi.html  paymentrequestapi_spec.json  priceapi.html  priceapi_spec.json  processlogapi.html  processlogapi_spec.json  productapi.html  productapi_spec.json  promotionapi.html  promotionapi_spec.json  purchaseapi.html  purchaseapi_spec.json  quotationapi.html  quotationapi_spec.json  saleapi.html  saleapi_spec.json  shipmentapi.html  shipmentapi_spec.json  shopapi.html  shopapi_spec.json  (+8 more)
